<resources>
    <string name="app_name">Animolz</string>
    <string name="intro">Halo, Selamat datang di Aplikasi Animolz. Silahkan masukan data anda.\n</string>
    <string name="proses">Proses</string>
    <string name="reset">Reset</string>
    <string name="txtNama">Nama Anda</string>
    <string name="txtNamaHewan">Nama Peliharaan Anda</string>
    <string name="jenisHewan">Jenis Peliharaan</string>
    <string name="kucing">Kucing</string>
    <string name="anjing">Anjing</string>
    <string name="nama_invalid">Nama Tidak Boleh Kosong!</string>
    <string name="namaHewan_invalid">Nama Hewan Tidak Boleh Kosong!</string>
    <string name="jenis_invalid">Jenis Tidak Boleh Kosong!</string>
    <string name="exit_dialog">Apakah anda yakin ingin keluar dari aplikasi Animolz?</string>
    <string name="exit_ya">Ya</string>
    <string name="exit_gak">Tidak</string>
    <string name="press_again_exit_app">tekan kembali untuk keluar</string>
    <string name="nav_home">Pendataan Hewan</string>
    <string name="nav_list">Riwayat Data Hewan</string>
    <string name="nav_about">Tentang</string>
    <string name="about_mi">Arief Wardhana</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="btn_bagikan">Bagikan Aplikasi Ini</string>
    <string name="title_activity_isenk_doank">IsenkDoank</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_data_available">Gak ada apa-apa disini, terimakasih</string>
    <string name="btn_isenk">Jangan Dibuka</string>
    <string name="hasilHewan">Hewan: %1$s - %2$s</string>
    <string name="data_x">%1$s - TB: %2$s - %3$s</string>
    <string name="belum_ada_data">Data Belum Ada</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi_hapus">Hapus Semua Data?</string>
    <string name="hapus_histori">Hapus Data</string>
    <string name="nav_article">Artikel</string>
    <string name="failed_load_data_api">Gagal Menampilkan Data!</string>
    <string name="action_search">Search</string>
</resources>