<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.coedotzltdv.animolz.ui.AboutFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_pendataan" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="id.coedotzltdv.animolz.ui.AboutFragment"
        android:label="@string/nav_list"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="id.coedotzltdv.animolz.ui.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about" />
</navigation>