<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/logoAnimolz"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logoanimolz" />

        <TextView
            android:id="@+id/textViewIntro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoAnimolz" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewIntro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nama_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNama" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namaHewan_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/nama_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/namaHewan_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNamaHewan" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtJenisHewan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/jenisHewan"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtJenisHewan"
            app:layout_constraintTop_toBottomOf="@id/namaHewan_hint">

            <RadioButton
                android:id="@+id/kucingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kucing" />

            <RadioButton
                android:id="@+id/anjingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/anjing" />
        </RadioGroup>

        <Button
            android:id="@+id/btnProses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="16dp"
            android:text="@string/proses"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/reset"
            app:layout_constraintStart_toEndOf="@+id/btnProses"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReset" />

        <TextView
            android:id="@+id/textKosong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ImageView
            android:id="@+id/gambarHewan"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textKosong"
            app:srcCompat="@drawable/kucing" />

        <TextView
            android:id="@+id/txtDataAnimolz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="18dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginBottom="32dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gambarHewan"
            tools:text="Data Animolz" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>